swaps to archived version which lives on publications.newberry.org

--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en" style="height: 100%; width: 100%;">
 <head>
   <meta charset="UTF-8">
-  <meta name="google-site-verification" content="JG_Q_98zm02D-rzeMI7xGdqfKh0PNoGTWsqTCR4vkpg" />
-  <meta name="description" content="Chicago 1919: Confronting the Race Riots. A series of community conversations. Chicago 1919 is guided by the belief that the 1919 race riots can serve as a lens for understanding Chicago today. Racial tensions related to policing, migration, and housing all came to a head in 1919. By reflecting on the past 100 years, Chicagoans may see how our current racial divisions evolved from the race riots, as the marginalization of African Americans in Chicago became institutionalized through increasingly sophisticated forms of discrimination.">
-  <meta name="author" content="Newberry Library">
-  <meta name="keywords" content="Chicago,1919,Race,Riots,Confront,Community">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chicago 1919: Confronting the Race Riots</title>
+  <title>Chicago 1919</title>
   <style>
     body {
       margin: 0px;
